manifests/kubeflow/components/pipelines-standalone/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kubeflow
spec:
  gateways:
    - os4ml/os4ml-gateway
    - kubeflow-gateway
  hosts:
    - '*'
  http:
    - name: "pipeline-route"
      match:
        - uri:
            prefix: /
      route:
        - destination:
            host: ml-pipeline-ui.kubeflow.svc.cluster.local
            port:
              number: 80
